--- a/app/views/organized/bikes/new_iframe.html.haml
+++ b/app/views/organized/bikes/new_iframe.html.haml
@@ -109,8 +109,10 @@
 
     .input-group
       .submit-registration
-        = submit_tag "Record parking notification for", class: "button-submit"
+        = submit_tag "Record parking notification for", class: "button-submit", disabled: true
         = select(:bike, :cycle_type, CycleType.select_options, { required: true })
+        .please-wait-text.less-strong
+          Please wait, processing
 
     .input-group.form-foot
       .control-group.form-photo-group
