--- a/app/views/organized/bikes/new_iframe.html.haml
+++ b/app/views/organized/bikes/new_iframe.html.haml
@@ -109,7 +109,7 @@
 
     .input-group
       .submit-registration
-        = submit_tag "Record parking notification for", class: "button-submit", disabled: true
+        = submit_tag "Record parking notification for", class: "button-submit"
         = select(:bike, :cycle_type, CycleType.select_options, { required: true })
         .please-wait-text.less-strong
           Please wait, processing
