--- a/app/views/organized/hot_sheets/show.html.haml
+++ b/app/views/organized/hot_sheets/show.html.haml
@@ -1,6 +1,6 @@
 -# TODO: translations
 
-- if !current_organization.hot_sheet_enabled?
+- if !current_organization.hot_sheet_on?
   .alert.alert-info
     %h3.uncap
       Hot Sheets are not enabled!
