--- a/app/views/shared/_organized_skeleton.html.haml
+++ b/app/views/shared/_organized_skeleton.html.haml
@@ -92,6 +92,9 @@
           - if current_organization.enabled?("hot_sheet")
             %li
               = active_link t(".hot_sheet_configuration"), edit_organization_hot_sheet_path(organization_id: current_organization.to_param), class: "menu-item"
+          - if current_organization.appointment_functionality_enabled?
+            %li
+              = active_link t(".appointment_configuration"), organization_appointment_configurations_path(organization_id: current_organization.to_param), match_controller: true, class: "menu-item"
 
 .organized-wrap
   %div{ class: organized_container }
