my_account > edit_my_account

--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -160,7 +160,7 @@ $border-radius-sm: 1px;
 
 // User pages
 // @import "revised/pages/user/home";
-// @import "revised/pages/user/edit"; // my_account page
+// @import "revised/pages/user/edit"; // my_account/edit page
 
 // Error pages
 // @import "revised/pages/errors";
