--- a/app/assets/stylesheets/revised.scss
+++ b/app/assets/stylesheets/revised.scss
@@ -207,7 +207,7 @@ $zoom-img-wrap-z-index: $zindex-navbar-fixed + 100;
 @import "revised/pages/user/home";
 @import "revised/pages/user/edit";
 
-// my_account page
+// my_account/edit page
 @import "revised/pages/user/show";
 
 // public show page
