--- a/app/views/shared/_footer_revised.html.haml
+++ b/app/views/shared/_footer_revised.html.haml
@@ -65,7 +65,7 @@
                   onchange: "this.form.submit()")
                 - if current_user.present? && current_user.preferred_language != I18n.locale
                   %em.below-input-help.text-right
-                    = link_to t(".change_preferred_language"), my_account_path
+                    = link_to t(".change_preferred_language"), edit_my_account_path
         .col-md-6.text-right
           %p
             = [link_to(t(".privacy_policy"), privacy_url),
