--- a/app/views/locks/edit.html.haml
+++ b/app/views/locks/edit.html.haml
@@ -1,7 +1,7 @@
 .container
   %header.with-subtitle
     %h1= t(".edit_the_lock")
-    %p= link_to(t(".back_to_viewing_all_locks"), user_home_path(active_tab: 'locks'))
+    %p= link_to(t(".back_to_viewing_all_locks"), my_account_path(active_tab: 'locks'))
 
   = render partial: "form"
 
