--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -159,8 +159,8 @@ $border-radius-sm: 1px;
 // @import "revised/pages/bikes/show_photo"; // separated because it's a lot
 
 // User pages
-// @import "revised/pages/user/home";
-// @import "revised/pages/user/edit"; // my_account/edit page
+// @import "revised/pages/my_accounts/show";
+// @import "revised/pages/my_accounts/edit";
 
 // Error pages
 // @import "revised/pages/errors";
