--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,6 @@
     = stylesheet_link_tag 'revised', media: 'all'
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-    <!-- TODO: Use yarn -->
     <script src="https://kit.fontawesome.com/82eb17360c.js"></script>
     = javascript_include_tag 'application_revised'
     :javascript
@@ -143,9 +142,9 @@
                 %li
                   = active_link t(".register_a_new_bike"), new_bike_path, class: 'nav-link'
                 %li
-                  = active_link t(".your_bikes"), user_home_path, class: 'nav-link'
+                  = active_link t(".your_bikes"), my_account_path, class: 'nav-link'
                 %li
-                  = active_link t(".user_settings", user_email: current_user_or_unconfirmed_user.email), my_account_path, class: 'nav-link'
+                  = active_link t(".user_settings", user_email: current_user_or_unconfirmed_user.email), edit_my_account_path, class: 'nav-link'
                 %li.divider-nav-item
                 %li
                   = link_to t(".logout"), goodbye_path, class: 'nav-link'
