--- a/app/views/my_accounts/show.html.haml
+++ b/app/views/my_accounts/show.html.haml
@@ -113,7 +113,7 @@
               %p
                 %strong
                   = t(".tell_us_more_about_yourself")
-                = link_to t(".update_your_profile"), my_account_url
+                = link_to t(".update_your_profile"), edit_my_account_url
           - if @bikes.present?
             .lock-group
               .image-column
