--- a/app/views/shared/_header_nav.html.haml
+++ b/app/views/shared/_header_nav.html.haml
@@ -34,9 +34,9 @@
           #you.tab-pane.yes_user.hidden
             %ul
               %li
-                = link_to t(".your_bikes"), user_home_url, class: "follow-link"
+                = link_to t(".your_bikes"), my_account_url, class: "follow-link"
               %li
-                %a{ title: t(".your_preferences"), href: "/my_account"}
+                %a{ title: t(".your_preferences"), href: "/edit_my_account"}
                   = t(".preferences")
               %li
                 = link_to t(".log_out"), session_path, method: :delete
