--- a/app/views/organized_mailer/hot_sheet.html.haml
+++ b/app/views/organized_mailer/hot_sheet.html.haml
@@ -1,12 +1,7 @@
 -# TODO: translations
 
-%h1
-  %strong
-    = @organization.short_name
+%h1.uncap
   = @hot_sheet.subject
-  %em.small{ style: "font-size: 16px;" }
-    = link_to "on Index", organization_hot_sheet_url(organization_id: @organization.to_param, day: @hot_sheet.sheet_date)
-
 - @stolen_records.each do |stolen_record|
   - bike = stolen_record.bike
   - thumb_url = bike.thumb_path || bike.stock_photo_url
@@ -47,3 +42,11 @@
         = Geocodeable.address(stolen_record, country: false)
 
     .clearstuffdiv
+
+.email-hot-sheet-link-footer
+  %p
+    = link_to organization_hot_sheet_url(organization_id: @organization.to_param, day: @hot_sheet.sheet_date) do
+      View this
+      %em
+        Stolen Bike Hot Sheet
+      on Bike Index
