--- a/app/assets/stylesheets/revised/emails/email_components.scss
+++ b/app/assets/stylesheets/revised/emails/email_components.scss
@@ -9,9 +9,11 @@
   display: block;
   text-align: center;
   max-width: 100%;
+  border-radius: 2px;
   &:hover {
     color: #fff;
     text-decoration: none;
+    background: $blue;
   }
 }
 
