--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -87,7 +87,7 @@
                     = active_link t(".registration_stickers"), organization_stickers_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
                 - if passive_organization.enabled?("hot_sheet")
                   %li
-                    = active_link t(".hot_sheet"), organization_hot_sheet_path(organization_id: passive_organization.to_param), class: "nav-link"
+                    = active_link t(".stolen_hot_sheet"), organization_hot_sheet_path(organization_id: passive_organization.to_param), class: "nav-link"
                 - if passive_organization.enabled?("csv_exports")
                   %li
                     = active_link t(".exports"), organization_exports_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
@@ -107,7 +107,7 @@
                       = active_link t(".customize_emails"), organization_emails_path(organization_id: passive_organization.to_param), match_controller: true, class: "nav-link"
                   - if passive_organization.enabled?("hot_sheet")
                     %li
-                      = active_link t(".hot_sheet_configuration"), edit_organization_hot_sheet_path(organization_id: passive_organization.to_param), class: "nav-link"
+                      = active_link t(".stolen_hot_sheet_configuration"), edit_organization_hot_sheet_path(organization_id: passive_organization.to_param), class: "nav-link"
               - if current_user&.superuser?
                 %li.divider-nav-item
                 %li
