--- a/app/assets/stylesheets/revised/emails/email_sections.scss
+++ b/app/assets/stylesheets/revised/emails/email_sections.scss
@@ -11,13 +11,24 @@
 }
 
 .binx-header {
-  height: $header-height;
   width: 100%;
   background: $gray-darker;
+  border: 0;
+  border-spacing: 0;
+  border-collapse: collapse;
+  tr,
+  td {
+    padding: 0;
+    border-spacing: 0;
+  }
+  td {
+    height: $header-height;
+  }
 
   img {
     display: block;
-    margin: (0.5 * $vertical-height) (1.5 * $vertical-height) 0 0;
+    margin: (0.3 * $vertical-height) (1.5 * $vertical-height)
+      (0.2 * $vertical-height) 0;
     float: right;
     height: $header-height - $vertical-height;
 
