--- a/app/views/organized_mailer/hot_sheet.html.haml
+++ b/app/views/organized_mailer/hot_sheet.html.haml
@@ -57,7 +57,7 @@
 
   .clear-org-buttons
     - location = [@organization.city]
-    - location += [@organization.country&.name] unless @organization.country.united_states?
+    - location += [@organization.country&.name] unless @organization.country&.united_states?
     = link_to "Search Stolen Bikes near #{@organization.city}", bikes_url(stolenness: "proximity", distance: 100, location: location.reject(&:blank?).join(", ")), class: "org-button"
 
   %p.hot-sheet-notification-change
