--- a/app/views/organized_mailer/hot_sheet.html.haml
+++ b/app/views/organized_mailer/hot_sheet.html.haml
@@ -1,11 +1,7 @@
 -# TODO: translations
 
-%h1
-  %strong
-    = @organization.short_name
+%h1.uncap{ style: "margin-bottom: 1rem;" }
   = @hot_sheet.subject
-  %em.small{ style: "font-size: 16px;" }
-    = link_to "on Index", organization_hot_sheet_url(organization_id: @organization.to_param, day: @hot_sheet.sheet_date)
 
 - @stolen_records.each do |stolen_record|
   - bike = stolen_record.bike
@@ -47,3 +43,23 @@
         = Geocodeable.address(stolen_record, country: false)
 
     .clearstuffdiv
+
+- if @organization.overview_dashboard?
+  .clear-org-buttons
+    = link_to "View #{@organization.short_name} Dashboard", organization_dashboard_index_url(organization_id: @organization.to_param), class: "org-button"
+
+.email-hot-sheet-link-footer
+  %p
+    View this
+    %em
+      = link_to "Stolen Bike Hot Sheet", organization_hot_sheet_url(organization_id: @organization.to_param, day: @hot_sheet.sheet_date)
+    on Bike Index
+
+  .clear-org-buttons
+    - location = [@organization.city]
+    - location += [@organization.country&.name] unless @organization.country&.united_states?
+    = link_to "Search Stolen Bikes near #{@organization.city}", bikes_url(stolenness: "proximity", distance: 100, location: location.reject(&:blank?).join(", ")), class: "org-button"
+
+  %p.hot-sheet-notification-change
+    %small.less-strong
+      Don't want to receive hot sheets emails? Update your email preferences on #{link_to "your account page", edit_my_account_url}.
