--- a/app/views/organized/hot_sheets/show.html.haml
+++ b/app/views/organized/hot_sheets/show.html.haml
@@ -3,7 +3,7 @@
 - if !current_organization.hot_sheet_on?
   .alert.alert-info
     %h3.uncap
-      Stolen Bike Hot Sheets are not enabled!
+      Stolen Bike Hot Sheets are not turned on!
     - if current_user.admin_of?(current_organization)
       %p
         Enable them on the
