--- a/app/assets/stylesheets/revised/emails/email_hot_sheet.scss
+++ b/app/assets/stylesheets/revised/emails/email_hot_sheet.scss
@@ -1,6 +1,6 @@
 .email-hot-sheet-link-footer {
   margin-top: 34px;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #dddddd;
   p {
     text-align: center;
   }
@@ -18,12 +18,12 @@
   .org-button {
     display: inline-block;
     padding: 0.75rem 1rem;
-    border: 1px solid darken(#aaa, 5%);
-    background: #aaa;
+    border: 1px solid darken(#aaaaaa, 5%);
+    background: #aaaaaa;
     font-weight: bold;
     border-radius: 3px;
     max-width: 100%;
-    color: #fff !important;
+    color: #ffffff;
     text-decoration: none;
     line-height: 1;
   }
